--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="connection">Connection</string>
     <string name="login">login</string>
     <string name="password">Password</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
