--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="login">login</string>
     <string name="password">Password</string>
     <string name="title_activity_maps">Map</string>
+    <string name="number_picker_formatter">%02d minutes</string>
 </resources>
